Small changes to make cutter run on the new laptop